--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "react": "^19.0.0",
