--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.9",
     "@ai-sdk/openai": "^3.0.11",
     "@ai-sdk/react": "^3.0.39",
     "@base-ui/react": "^1.0.0",
+    "@google/generative-ai": "^0.24.1",
+    "@openrouter/ai-sdk-provider": "^6.0.0-alpha.1",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
@@ -32,6 +35,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.3",
     "shadcn": "^3.6.3",
+    "streamdown": "^2.0.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0",
