--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tanstack/react-query": "^5.90.17",
+    "@vercel/analytics": "^1.6.1",
     "ai": "^6.0.37",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
