--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
     "next": "^16.1.1",
+    "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "^19.2.3",
     "react-day-picker": "^9.13.0",
