--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/react": "^3.0.39",
     "@base-ui/react": "^1.0.0",
     "@google/generative-ai": "^0.24.1",
+    "@number-flow/react": "^0.5.11",
     "@openrouter/ai-sdk-provider": "^6.0.0-alpha.1",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
